--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,5 @@ markers =
     guest: тесты для не авторизованного пользователя
     login_link: тест перехода на страницу входа
     login_guest
+    register_and_by: класс регистрации и добавления в корзину
+    need_review
